<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:outlineProvider="bounds"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/CustomToolbar"
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineProvider="bounds"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_add_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/img_add_post"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/img_back"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/text_add_title"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:hint="@string/title_hint"
            app:layout_constraintStart_toEndOf="@id/img_back"
            app:layout_constraintEnd_toStartOf="@id/img_add_post"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>