...
        app:layout_constraintEnd_toEndOf="@id/gl_vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/btn_edit"
        android:background="@drawable/custom_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintEnd_toEndOf="parent"
...
    <EditText
        android:id="@+id/input_description"
        android:background="@drawable/custom_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/input_title"
        android:layout_margin="16dp"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:padding="4dp"
        android:textSize="20sp"
...
